@@ -6,6 +6,7 @@ Added:
   - Configured to use four spaces for indentation.
   - Show column number in the mode line.
   - Highlight trailing whitespaces in prog-mode, conf-mode and text-mode.
+  - Support optional local file loaded in the end of the initialization.
 
 Changed:
   - Frames default width slightly balanced.
